Update confinemnt to strict, stable

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,8 +7,8 @@ summary: Nord GTK, cursor, and icon themes
 description: |
   A snap that exports the Nord GTK, cursor and icon themes.
 
-grade: devel # must be 'stable' to release into candidate/stable channels
-confinement: devmode # use 'strict' once you have the right plugs and slots
+grade: stable # must be 'stable' to release into candidate/stable channels
+confinement: strict # use 'strict' once you have the right plugs and slots
 
 slots:
   gtk-2-themes:
